# OpenTSDBClient

./: .gitignore  README.md  environment_complete.yml  pyproject.toml
.github/workflows/: ci.yml
opentsdb/: client.py  request.py  utils.py
opentsdb_py_client/: opentsdb.py  utils.py
src/opentsdb2py/: client.py
tests/: opentsdb_test.py
