[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentsdb2py"
version = "0.1.3"
authors = [
  { name="Niels Westphal", email="opentsdbclient@nielswestphal.de" },
]
description = "A simple OpenTSDB client for Python 3.11+. Warning: This is a work in progress and not ready for production use yet. Breaking changes will be introduced at a regular basis. Feel free to partiscipate in the development by issues or pull requests."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/WNiels/OpenTSDBClient"
"Bug Tracker" = "https://github.com/WNiels/OpenTSDBClient/issues"

[tool.poetry]
name = "opentsdb2py"
version = "0.1.3"
authors = ["Niels Westphal"]
description = "A simple OpenTSDB client for Python 3.11+. Warning: This is a work in progress and not ready for production use yet. Breaking changes will be introduced at a regular basis. Feel free to partiscipate in the development by issues or pull requests."

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.4"
black="^23.3.0"