[tool.poetry]
name = "opentsdb2py"
version = "0.1.4-alpha"
description = "\"A simple OpenTSDB client for Python 3.11+. Warning: This is a work in progress and not ready for production use yet. Breaking changes will be introduced at a regular basis. Feel free to partiscipate in the development by issues or pull requests.\""
authors = ["Niels Westphal <git@nielswestphal.de>"]
license = "GPLv3"
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/WNiels/OpenTSDBClient"
"Bug Tracker" = "https://github.com/WNiels/OpenTSDBClient/issues"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
